@@ -360,7 +360,7 @@ var _ = framework.KubeDescribe("GCP Volumes", func() {
 	})
 
 	////////////////////////////////////////////////////////////////////////
-	// NFS
+	// NFSv4
 	////////////////////////////////////////////////////////////////////////
 
 	framework.KubeDescribe("NFSv4", func() {
@@ -385,6 +385,40 @@ var _ = framework.KubeDescribe("GCP Volumes", func() {
 				NFS: &api.NFSVolumeSource{
 					Server:   serverIP,
 					Path:     "/",
+					ReadOnly: true,
+				},
+			}
+			// Must match content of test/images/volumes-tester/nfs/index.html
+			testVolumeClient(f, config, volume, nil, "Hello from NFS!")
+		})
+	})
+
+	////////////////////////////////////////////////////////////////////////
+	// NFSv3
+	////////////////////////////////////////////////////////////////////////
+
+	framework.KubeDescribe("NFSv3", func() {
+		It("should be mountable for NFSv3", func() {
+			config := VolumeTestConfig{
+				namespace:   namespace.Name,
+				prefix:      "nfs",
+				serverImage: "gcr.io/google_containers/volume-nfs:0.8",
+				serverPorts: []int{2049, 20048},
+			}
+
+			defer func() {
+				if clean {
+					volumeTestCleanup(f, config)
+				}
+			}()
+			pod := startVolumeServer(f, config)
+			serverIP := pod.Status.PodIP
+			framework.Logf("NFS server IP address: %v", serverIP)
+
+			volume := api.VolumeSource{
+				NFS: &api.NFSVolumeSource{
+					Server:   serverIP,
+					Path:     "/exports",
 					ReadOnly: true,
 				},
 			}
